implement CT up to page 3

--- a/pota.tex
+++ b/pota.tex
@@ -74,11 +74,11 @@ is to gather kinematical information of stars and compact sources in the Fornax
 Core using different VLT instruments, in synergy with the Fornax Deep Survey 
 carried out at the VLT Survey Telescope (VST). GC candidates were selected in 
 multi-band VST and VISTA images. About 4500 low resolution spectra (from 4800 
-to 10000\AA) were observed in 25 VLT/VIMOS masks covering the central 1 deg$^2$ 
+to 10000 \AA) were observed in 25 VLT/VIMOS masks covering the central 1 deg$^2$ 
 around the dominant galaxy NGC~1399 corresponding to $\sim$200 kpc. We describe 
 the methodology used for data reduction and data analysis. We found a total of 
 387 unique physical objects (372 GCs and 15 ultra compact dwarfs) in the field 
-covered by our observation. Most of these objects are overlapped and possibly 
+covered by our observations. Most of these objects are overlapped and possibly 
 associated with NGC~1399, with only 10\% likely associated with other giant 
 galaxies. However the kinematics of the objects beyond 10 arcmin (i.e. $\sim$60 
 kpc) is consistent with the one of an unbound population and likely dominated 
@@ -110,11 +110,11 @@ galaxies:star clusters -- galaxies:evolution-- galaxies: kinematics and dynamics
 \section{Introduction}
 
 Nearby galaxy clusters are ideal laboratories for studying the evolution of 
-low- and high mass galaxies as well as dense stellar systems (globular 
-clusters, compact dwarf galaxies, planetary nebulae, etc.) in dense environments. The Virgo and 
-Fornax clusters are closest galaxy clusters, hence providing privileged targets 
-where detailed observations of the galaxy and small stellar system content can 
-be performed, and galaxy formation theories can be tested. 
+low and high mass galaxies as well as dense stellar systems (globular 
+clusters, compact dwarf galaxies, planetary nebulae, etc.) in dense environments. 
+The Virgo and Fornax clusters are the closest galaxy clusters, hence providing 
+privileged targets where detailed observations of the galaxy and small stellar 
+system content can be performed, and galaxy formation theories can be tested. 
 
 The Fornax cluster is the most massive galaxy structure after the Virgo cluster 
 within 20 Mpc and it is an ideal target to study the effect of the environment 
@@ -127,7 +127,8 @@ early-type galaxies \citep{Ferguson89}, the presence of stellar and GC tidal
 streams (e.g. \citealt{Iodice16}, \citealt{DAbrusco16}, Eisenhardt et al. 
 2017) have revealed that there are still signs of active galaxy interactions in 
 the region inside 200 kpc, which mirrors the large scale activity, including 
-the accretion of the Fornax-A (NGC 1316) subgroup (dominated by the brightest cluster member, NGC~1316) into the cluster core along a 
+the accretion of the Fornax-A (NGC 1316) subgroup (dominated by the brightest 
+cluster member, NGC~1316) into the cluster core along a 
 cosmic web filament \citep{Drinkwater00,Scharf05}.
 
 The Fornax Deep Survey\footnote{ESO programme ID (094.B-0687)} (FDS) is a joint 
@@ -141,7 +142,7 @@ spectroscopy.
 The cornerstone of FDS is deep multiband ($u$, $g$, $r$ and $i$) imaging data 
 from the OmegaCam (Kuijken 2011) camera at the VLT Survey Telescope (VST, 
 \citealt{schipani+12}), covering an area of $\sim30$ deg$^2$ of the cluster out 
-to the virial radius. The area includes the Fornax-A subgroups, hence providing 
+to the virial radius. The area includes the Fornax-A subgroup, hence providing 
 a full coverage of the cluster structure under assembly.  The depth of the 
 imaging dataset reaches $\sim 30$ mag/arcsec$^2$ in the $g$-band (see \citealt{Iodice16,iodice17}
 ), among the deepest acquired on the cluster so far \citep{venhola+17}. 
@@ -176,7 +177,7 @@ velocity catalogue of GCs and UDGs in the core of Fornax, which is
 complementary to archival spectroscopic GC datasets on a more limited area: 
 \citet{Schuberth} (which incorporates the catalogue of \citealt{Dirsch04}), 
 \citet{Bergond07} and other catalogues discussed throughout the 
-text). The novelty of the sample discussed in this paper is the uniform coverage 
+text. The novelty of the sample discussed in this paper is the uniform coverage 
 of the central 1 deg$^2$ of the Fornax core which allows us to provide a 
 spatially complete map of the kinematics of the galaxies in the field out to 
 the regions where they meet the intracluster field (see e.g., \citealt{napolitano03}
@@ -199,12 +200,12 @@ GCs.
 %extension of the stellar kinematics out to several effective radii and 
 %overlapping with the area covered by our analysis, which we will use to compare 
 %the average properties of the velocity field of the galaxy core.
-The assumed distance is 19.95 Mpc \citep{Tonry01}.
+The assumed distance is 19.95 Mpc \citep{Tonry01}. Hence, $1$ arcmin $\sim 5.8$ Kpc.
 
 The paper is structured as follows: Section \ref{sec:data} describes the data 
 acquisition and reduction. The redshift estimation is discussed in Section 
 \ref{sec:zest}, results are presented in Section \ref{sec:analysis} and 
-discussed in \ref{sec:discussion}. We summarise the results of the paper and 
+discussed in Section \ref{sec:discussion}. We summarise the results of the paper and 
 conclude in Section \ref{sec:conclusions}. 
 
 \section{Data}
@@ -524,8 +525,8 @@ the top shows raw counts for stars and Fornax objects only, respectively. }
 \centering
 \includegraphics[width=\columnwidth]{figures/vstack_spectra.png} 
 \caption{A sample of GC spectra suitably normalised. Shown are 
-continuum-normalized redshift-corrected spectra for GCs with increasing $S/N$ per resolution element
-(from top to the bottom). The spectrum at the top has $S/N = 15$, 
+continuum-normalized redshift-corrected spectra for GCs with increasing 
+$S/N$ per resolution element (from top to the bottom). The spectrum at the top has $S/N = 15$, 
 the one at the bottom $S/N = 50$. The main atomic lines are labelled on the top. Features 
 such as the strong absorption in the spectrum at Flux $= 2$ and the emission in 
 the spectrum at Flux $=3$ are instrumental artifacts and not physical features 
@@ -622,7 +623,8 @@ We measured radial velocities for 51 duplicated objects (including Galactic
 stars), observed across multiple VIMOS masks. The velocity difference $\Delta 
 v$ between duplicated objects is shown in Figure \ref{fig:internal} as a 
 function of $g$ magnitude. We detected no clear trend between $\Delta v$ and 
-the magnitude, but a significant scatter is observed. One object has a velocity difference which scatters more than 
+the magnitude, but a significant scatter is observed. One object has a velocity 
+difference which scatters more than 
 3$\sigma$ from the average. We attributed this disagreement to an issue with 
 the wavelength calibration for this particular object. The root-mean-square of 
 the velocity difference of GCs and stars combined is $91 \kms$, which becomes 
@@ -637,7 +639,8 @@ Fornax objects and 464 Galactic stars.
 \includegraphics[width=\columnwidth]{figures/internal.png} 
 \caption{Internal velocity comparison. The figure shows the velocity difference 
 $\delta v$ between GCs with two independent velocity measurements. The solid 
-and dashed line represent the reference $\delta v = 0 \kms$ and $\delta v = \pm 100 \kms$, respectively. }
+and dashed line represent the reference $\delta v = 0 \kms$ and 
+$\delta v = \pm 100 \kms$, respectively. }
 \label{fig:internal}
 \end{figure}
 
@@ -747,10 +750,11 @@ analysis.
 
 \section{Discussion}
 \label{sec:discussion}
-In this section we discuss some qualitative properties of the final dataset of bona-fide GCs and UCDs. We 
-look at the spatial distribution and phase-space diagrams. A detailed kinematic 
-and dynamic analysis (rotation curve, dark matter modelling, luminosity 
-function analysis) will be the subject of forthcoming papers.
+In this section we discuss some qualitative properties of the final dataset 
+of bona-fide GCs and UCDs. We look at the spatial distribution and 
+phase-space diagrams. A detailed kinematic and dynamic analysis 
+(rotation curve, dark matter modelling, luminosity function analysis) will 
+be the subject of forthcoming papers.
 
 \begin{figure*}
 \centering
@@ -909,7 +913,7 @@ size. However, each bin contains roughly the same number of objects, namely :
 
 \begin{figure*}
 \centering
-\includegraphics[scale = 0.8]{figures/vrms.png} 
+\includegraphics[scale = 0.8]{figures/vrms_pne.png} 
 \caption{Root-mean-square velocity dispersion of NGC~1399 stellar system. The 
 blue and red points represent the blue and red GCs/UCDs, respectively, whereas 
 the full grey-line shows the full master catalogue of 1133 GCs/UCDs. Bins are 
@@ -926,7 +930,7 @@ dispersion derived for Fornax galaxies by \citet{Drinkwater00}.}
 Figure \ref{fig:vrms} displays the $v_{\rm rms}$ profile for: i) our combined 
 master catalogue of 1133 GCs and UCDs; ii) the GC catalogue of 
 \citet{Schuberth}, iii) the central stars of galaxies surrounding NGC~1399; iv) 
-all Fornax galaxies from \citet{Drinkwater00}. 
+all Fornax galaxies from \citet{Drinkwater00}, v) PNs from FVSS-II (Spiniello et al., 2018, submitted).
 
 The master catalogue contains GCs and UCDs predominantly from NGC 1399, which 
 is the largest and more massive system in the field dominating the total 
@@ -936,16 +940,21 @@ in particular NGC 1404, NGC 1387, are likely to contaminate the
 kinematics of the central galaxies. However, looking at the $v_{\rm rms}$ 
 profile of the total sample (shaded gray area) there is a steep rise in the 
 profile around $R\sim10$ arcmin which marks a kinematical transition from a 
-``colder'' kinematical region ($\sim 50$ Kpc) to a ``warmer'' one. In the 
-outermost region, the $v_{\rm rms}$ profile flattens out to a value which is 
+``colder'' kinematical region ($\sim 50$ Kpc) to a ``warmer'' one. 
+The same behaviour can be observed in the PNs datapoints 
+(magenta triangles). As discussed in FVSS-II, the peak in $v_{\rm rms}$ 
+of the point around $R\sim 8$ arcmin, could partially be due to NGC~1404. 
+In fact, Planetaries bounded to this galaxy could possibly contaminate the sample, 
+causing an increase of the $v_{\rm rms}$ in that particular radial bin.
+
+In the outermost region, the $v_{\rm rms}$ profile flattens out to a value which is 
 fairly consistent with the kinematics of the cluster galaxies (the green data 
 point at $R\sim35$ arcmin from \citealt{Drinkwater00}). This suggests that the GC 
 kinematics at radii larger than 10 arcmin is ruled by the cluster potential. 
 This feature demonstrates kinematically that the photometric transition radius 
 between the bright central galaxy and the outer exponential halo at $R\sim10$ 
 arcmin from \citet{Iodice16} represents the radius where we observe the 
-emergence of an intracluster population of GCs. A similar conclusion is found 
-for planetary nebulae by Spinello et al. (2018, submitted), and hence multiple lines of 
+emergence of an intracluster population of GCs and PNe. Hence multiple lines of 
 evidence are converging, for the first time, on the existence of a 
 photometrically and kinematically distinct intracluster light population in the 
 Fornax Cluster core.
@@ -954,6 +963,8 @@ When split in the red and blue subpopulations, using a colour cut at $(g - i) = 
 the GC sample shows some systematic differences. At all radii the $v_{\rm rms}$ 
 profile of the red GCs is systematically smaller than the one of the blue GCs, 
 albeit the two profiles are broadly consistent with each other within one sigma. 
+The $v_{\rm rms}$ of PNs is consistent with that of red GCs, as observed is 
+most giant galaxies \citep[e.g.,][]{Pota13}.
 In the innermost regions at $R < 10$ arcmin our results are consistent with  
 those from \citet{Schuberth}. In particular the blue GCs turn out to 
 be the more extended population in radius, nicely connecting to the value of 
@@ -966,7 +977,7 @@ determine the expected change in the normalisation of the two profiles, we have
 found that for a $v_{\rm rms} \sim 300$ km s $^{-1}$ of the red GC value the 
 estimated blue GC value of $v_{\rm rms}$ is $\sim 308$ km s $^{-1}$, i.e. 
 consistent with what we have measured for the Blue GC datapoint within the 
-typical errors.
+typical errors. 
 
 Finally, we report in the same Figure the central velocity dispersions of 
 the galaxies populating the same area occupied by the total GC catalog. 
