--- a/pota.tex
+++ b/pota.tex
@@ -10,7 +10,7 @@
 \usepackage[inline]{enumitem}
 
 \newcommand{\kms}{\mbox{\,km~s$^{-1}$}}
-\setlength{\tabcolsep}{0.06in}   % reduce the column spacing in the Tables
+\setlength{\tabcolsep}{0.06in}  
  
 \title[The Fornax Cluster VLT Spectroscopic Survey]{The Fornax Cluster VLT 
 Spectroscopic Survey. I -- Spectroscopy and compilation of the globular cluster 
@@ -92,7 +92,7 @@ with unprecedented details. Here we have found that the velocity dipersion of
 the GC population (whether or not this is split in red and blue populations) 
 show the signature at around $R\sim10$ arcmin of a kinematical transition from a low 
 $v_{\rm rms}$ regime to a higher one, with the former being consistent with the 
-central velocity dispersion of NGC 1399 (the central cluster galaxy) and the 
+central velocity dispersion of NGC~1399 (the central cluster galaxy) and the 
 latter being consistent with the velocity dispersion of the cluster galaxies. 
 This demonstrates that at $R>10$ arcmin both GC populations feel strongly the cluster 
 potential, rather than the more fable galaxy potential. These kinematical 
@@ -127,7 +127,7 @@ early-type galaxies \citep{Ferguson89}, the presence of stellar and GC tidal
 streams (e.g. \citealt{Iodice16}, \citealt{DAbrusco16}, Eisenhardt et al. 
 2017) have revealed that there are still signs of active galaxy interactions in 
 the region inside 200 kpc, which mirrors the large scale activity, including 
-the accretion of the Fornax-A (NGC 1316) subgroup (dominated by the brightest 
+the accretion of the Fornax-A (NGC~1316) subgroup (dominated by the brightest 
 cluster member, NGC~1316) into the cluster core along a 
 cosmic web filament \citep{Drinkwater00,Scharf05}.
 
@@ -271,7 +271,7 @@ the bright side and too low signal-to-noise spectra on the faint side.
 %targets can be seen in the $(g-i)$ vs. $i$ CMD of FigureXX 
 %(fnxgtocmdgiKadp.pdf).
 For the very central regions of NGC~1399, which are dominated by the galaxy 
-light, we found additional GC candidates taking advantage on the more accurate 
+light, we found additional GC candidates taking advantage of the more accurate 
 photometry and morphological classification derived from {\it Hubbe Space 
 Telescope}/ACS data by \citet{Puzia14}.
 
@@ -279,13 +279,13 @@ Finally, all other allocated fibers, i.e. the remaining 1678 slits, besides a
 small portion used to duplicate targets, were split to observe known stars and 
 background galaxies. These latter will be discussed in a separate paper. 
 
-The FDS $gi$, the NGFS $K_s$, Washington $C$ as well as the central ACS  
-photometric catalogs were matched with SExtractor photometry of point and 
+The FDS $gi$, the NGFS $K_s$, Washington $C$, as well as the central ACS  
+photometric catalogs, were matched with SExtractor photometry of point and 
 extended sources in all pre-images (ESO programme 094.B-0687(A)), which were 
 taken in $R$-band prior to the spectroscopic observations. The x and y 
 coordinates of sources in the pre-images are needed to create VIMOS catalogs 
 for the creation of mask files with the VMMPS (VIMOS Mask Preparation 
-Software,\citealt{Bottini05}) from ESO.
+Software, \citealt{Bottini05}) from ESO.
 
 \subsection{VIMOS pointings and mask design}
 \label{sec:VIMOSpointings}
@@ -355,7 +355,7 @@ is higher. North is toward the top, East to the left.}
 Spectroscopic observations were carried out with the VIsible MultiObject 
 Spectrograph (VIMOS, \citealt{LeFevre}), mounted on the VLT-UT3 Melipal 
 telescope at the ESO Paranal observatory in Chile and used in multi-object 
-mode. The observations have been acquired in Period 94 (Program ID: 094.B-0687, 
+mode. Data were acquired in Period 94 (Program ID: 094.B-0687, 
 PI: M. Capaccioli), from October 2014 to January 2015. 
 The VIMOS spectrograph was equipped with a filter CG475, which cuts off 
 wavelengths bluer than 4750 \AA\ , and a MR grating with a spectral resolution 
@@ -370,9 +370,7 @@ $\sim$2 arcmin in vertical and horizontal direction (see examples of the VIMOS
 detector footprints in Figure \ref{fig:fov}). Overall, one VIMOS mask set 
 covers a field of 4 $\times$ (7 $\times$ 8 arcmin$^2$). All masks were observed 
 for 1.5 hours in total, divided into three dithered exposures of 30 minutes. 
-Observations were carried out in service mode in gray-time conditions between 
-October 2014 and January 2015. The seeing ranged from 0.66 arcsec to 1.15 
-arcsec, with a median of 0.85 arcsec. 
+The seeing ranged from 0.66 arcsec to 1.15 arcsec, with a median of 0.85 arcsec. 
 
 \subsection{Data reduction}
 
@@ -390,7 +388,7 @@ the spectra.
 In order to obtain the final wavelength calibrated science spectra, we 
 proceeded as follows. First, a wavelength calibration 
 is performed using the provided arc lamp spectrum. Second, we calculated
-the residual shift of the sky lines are shifted with respect to their rest frame 
+the residual shift of the sky lines with respect to their rest frame 
 wavelength. For this purpose we provided our own sky line catalog, in which 
 the wavelengths of prominent sky lines, in particular in the Ca triplet (CaT)
 region, are listed. The pipeline determines this shift for each spectrum in 
@@ -425,7 +423,7 @@ on the spectra corrected in this way.
 For each mask, the REFLEX pipeline outputs multi-extension fits files which 
 include the calibrated 2D spectra, the calibrated 1D spectra (and respective 
 errors) and a 2D model of the sky lines. To make the dataset more manageable, 
-we implemented a python/astropy script which copies different data structures 
+we implemented a {\it python/astropy} script which copies different data structures 
 corresponding to each slit into a multi-extension fits file. Each slit is 
 associated to a fits file which contains: the 1D scientific spectrum, the 1D 
 error spectrum, the sky-subtracted, wavelength-corrected 2D spectrum and a 
@@ -516,7 +514,7 @@ spectra. Smaller TDR corresponds to larger velocity uncertainties $\delta v$
 (bottom panel) and therefore to a poorer spectral fit. The measured radial 
 velocity $v$ is shown on the y-axis of the top panel. The sequence of objects 
 at $v\approx 0 \kms$ are Galactic stars, whereas the cluster at 
-$v\approx1700\kms$ are GC candidates in the Fornax cluster. The histogram on 
+$v\approx1700\kms$ is composed by GC candidates in the Fornax cluster. The histogram on 
 the top shows raw counts for stars and Fornax objects only, respectively. }
 \label{fig:tdr}
 \end{figure}
@@ -526,12 +524,12 @@ the top shows raw counts for stars and Fornax objects only, respectively. }
 \includegraphics[width=\columnwidth]{figures/vstack_spectra.png} 
 \caption{A sample of GC spectra suitably normalised. Shown are 
 continuum-normalized redshift-corrected spectra for GCs with increasing 
-$S/N$ per resolution element (from top to the bottom). The spectrum at the top has $S/N = 15$, 
-the one at the bottom $S/N = 50$. The main atomic lines are labelled on the top. Features 
+$S/N$ per resolution element (from top to the bottom). The spectrum at the top has $S/N=15$, 
+the one at the bottom $S/N=50$. The main atomic lines are labelled on the top. Features 
 such as the strong absorption in the spectrum at Flux $= 2$ and the emission in 
 the spectrum at Flux $=3$ are instrumental artifacts and not physical features 
 of the GC. The flat horizontal lines between 7000-8000 \AA\ mark regions with 
-masked skylines (see text)}
+masked skylines (see text).}
 \label{fig:spectra}
 \end{figure}
 
@@ -575,7 +573,7 @@ cent, can be discerned only for spectra with $S/N \gtrsim 20 $.
 Figure \ref{fig:spectra} showcases some spectra with $S/N$ ranging from 50 
 (bottom spectrum) to 15 (top spectrum). 
 The GG475-filters of the first and third quadrant, coupled with the MR-grism, 
-introduce an absorption feature between about $5600 < \lambda < 6300 \AA\ $ 
+introduce an absorption feature between about $5600 < \lambda < 6300$ \AA\ 
 (see the third spectrum from the bottom in Figure \ref{fig:spectra} for an 
 example). This occurs because the GG475-filter is composed of 10-20\% in its 
 weight by sodium oxide. Impure manufacturing likely caused this feature but it 
@@ -583,7 +581,7 @@ does not affect our analysis because the blue part of the spectra is not used
 for our velocity measurements. Strong emission features can occasionally appear 
 in the blue part of the spectra (see the fifth spectrum from the bottom in 
 Figure \ref{fig:spectra}), but they are attributed to zero order overlaps that 
-are not corrected for by the Reflex reduction pipeline,rather than to physical 
+are not corrected for by the Reflex reduction pipeline, rather than to physical 
 phenomena associated with the light source. 
 
 For spectra with very low $S/N$ the distinction between atomic lines and noise 
@@ -592,7 +590,8 @@ candidates were independently eyeballed by five members of the team. The
 inspection was performed on a dashboard including the 2D image of the source, 
 the redshift corrected spectrum and attributes such as magnitude and S/N. We 
 gave a vote of $1$ to spectra which were certainly Fornax objects and $0$ to 
-non-Fornax object spectra. We found that 323 spectra received a vote of 5/5 
+non-Fornax object spectra. Votes from all members were summed-up for each spectrum. 
+We found that 323 spectra received a vote of 5/5 
 (meaning that these spectra were classified as Fornax objects by all members of 
 the team), 348 spectra received a vote $\ge$ 4/5 and 420 spectra received a vote 
 $\ge$ 3/5. In the followings, we will use the last set of 420 spectra as our 
@@ -612,8 +611,8 @@ our velocity measurements against literature studies. The small recovery fractio
 obtained ($\sim 17\%$) is due to a number of factors: contamination
 from stars and background galaxies in the fainter end of the GC 
 luminosities, low S/N objects due to their poor spectral quality (see Figure \ref{fig:tdr}),
-and observation at large galactocentric radii where the GC density is 
-below 1 GC$/$ arcmin$^2$ (see Figure 15 in \citealt{Schuberth} ). 
+and observations at large galactocentric radii where the GC density is 
+below 1 GC$/$ arcmin$^2$ (see Figure 15 in \citealt{Schuberth}). 
 
 \section{Results}
 \label{sec:analysis}
@@ -638,9 +637,9 @@ Fornax objects and 464 Galactic stars.
 \centering
 \includegraphics[width=\columnwidth]{figures/internal.png} 
 \caption{Internal velocity comparison. The figure shows the velocity difference 
-$\delta v$ between GCs with two independent velocity measurements. The solid 
-and dashed line represent the reference $\delta v = 0 \kms$ and 
-$\delta v = \pm 100 \kms$, respectively. }
+$\Delta v$ between GCs with two independent velocity measurements. The solid 
+and dashed line represent the reference $\Delta v = 0 \kms$ and 
+$\Delta v = \pm 100 \kms$, respectively. }
 \label{fig:internal}
 \end{figure}
 
@@ -654,7 +653,7 @@ Hilker07, Francis12, Drinkwater00}.
 To find which of our VIMOS objects have a literature counterpart, we matched 
 our catalogue of 387 Fornax objects with the NED (Nasa/Ipac Extragalactic 
 Database\footnote{https://ned.ipac.caltech.edu/}) database using the 
-python/astropy tools. 
+{\it python/astropy} tools. 
 We manually added the catalogue of \citet{Schuberth} to the literature 
 database, because these GC measurements are not in NED. We required the 
 literature objects to have a measured radial velocity and to be within 0.4 
@@ -741,7 +740,7 @@ Therefore, we use this magnitude cut as benchmark value to separate UCDs with
 $i \le 20.3$ from GCs with $i > 20.3$. This selection returns 15 UCD candidates 
 and 372 likely GCs. 
 
-The object at $\alpha=$3:36:37.253 $\delta=-$35:23:09.20 is the nucleus of the 
+The object with coordinates $\alpha=$3:36:37.253 $\delta=-$35:23:09.20 is the nucleus of the 
 nucleated dwarf galaxy FCC~171, whose radial velocity was first measured in 
 \citet{Bergond07}. This object will included in the GC sample in the following 
 analysis.  
@@ -766,8 +765,9 @@ measured systemic velocity of the Fornax objects presented in this paper
 \citet{Bergond07} (grey points) and Galactic stars measured in this paper 
 (green points). The systemic velocity of NGC~1399 is marked with a dashed line 
 at $v = 1425$ km s$^{-1}$. The systemic velocity and galactocentric distance of 
-giant Fornax galaxies (namely NGC~1404, NGC~1387, NGC~1380) are shown as red 
-crosses. Physical distances in kpc are also shown on the top panel. 
+giant Fornax galaxies (namely NGC~1404, NGC~1387, NGC~1380) are marked with 
+the correspondent galaxy name. 
+Physical distances in kpc are also shown on the top panel. 
 \textit{Right}: Position diagram, with North to the top and East to the left. 
 The plot shows the spatial distribution of the objects from the left panel 
 (except for Galactic stars for clarity). The distance is expressed in 
@@ -792,7 +792,7 @@ catalogues of Schuberth and Bergond combined provide a good representation of
 the current archival phase-space and spatial distribution of the GC system in 
 the core of the Fornax cluster. 
 
-The left panel in Fig. \ref{fig:phase-space} shows that the velocity 
+The left panel in Figure \ref{fig:phase-space} shows that the velocity 
 distribution of GCs/UCDs is well separated from that of Galactic stars, 
 although a few GCs between $10<R<20$ arcmin might be misclassified as Galactic 
 stars. 
@@ -802,7 +802,7 @@ $v_{\rm UCDs} = 1413 \pm 91 \kms$, respectively. These are both consistent with
 the average systemic velocity from the literature $v_{\rm NED} = 1425 \pm 4 
 \kms$. Our sample also includes interlopers from large galaxies surrounding 
 NGC~1399, in particular NGC~1380, NGC~1404, NGC~1387. The positions of these 
-three galaxies in the phase-space diagram are marked with red crosses. 
+three galaxies in the phase-space diagram are also labelled. 
 
 It is not trivial to disentangle the GC population of NGC~1387 and NGC~1404 
 because of their proximity in phase-space to NGC~1399. 
@@ -870,7 +870,7 @@ shallower than the other bands for detecting faint GCs \citep{DAbrusco16}.
 GCs/UCDs and contaminants are not well separated using merely $g$, $r$, $i$ 
 filters, but velocity information clearly separates GCs/UCDs from Galactic 
 stars and background galaxies. This is also shown in Figure \ref{fig:cc} 
-(left-bottom panel with $(g-i)$ vs .$v$) which shows how the velocity 
+(left-bottom panel with $(g-i)$ vs $v$) which shows how the velocity 
 dispersion of blue GCs with $(g-i) \le 0.85$ is higher than that of the red GCs, a 
 property shared with GC systems in the most giant galaxies \citep[e.g.,][]{Pota13}. 
 The rightmost panel, with $v$ vs $i$, shows that 
@@ -890,7 +890,7 @@ v_{\rm rms}^2 = \frac{1}{N}  \sum (v_i - v_{\rm sys})^2 - (\Delta v_i)^2 .
 where $v_i$ is the radial velocity of the i-th GC and $\Delta v_i$ is its 
 uncertainty. $v_{\rm sys}=1425 \kms$ is the systemic velocity of NGC~1399. 
 Uncertainties were derived with the formulae provided by \citet{Danese}. 
-The statistical error discussed in \S \ref{sec:analysis}.
+The statistical error discussed in Section \ref{sec:analysis}.
 
 The $v_{\rm rms}$ has been calculated using a total of 1133 unresolved objects 
 (inlcuding GCs and UCDs). Although we cannot exclude that GCs and UCDs are 
@@ -908,7 +908,7 @@ velocity with the uncertainties summed in quadrature. Also, GCs and UCDs from
 literature catalogues were given the VST photometry discussed in this work. 
 Therefore, no photometric calibration was required, e.g. to obtain Fig. 
 \ref{fig:cc}. The $v_{\rm rms}$ profile is computed in radial bins of irregular 
-size. However, each bin contains roughly the same number of objects, namely : 
+size. However, each bin contains roughly the same number of objects, namely: 
 48, 66, 88 objects per bin for the blue, red and all GCs (including UCDs), respectively. 
 
 \begin{figure*}
@@ -927,16 +927,16 @@ dispersion derived for Fornax galaxies by \citet{Drinkwater00}.}
 \label{fig:vrms}
 \end{figure*}
 
-Figure \ref{fig:vrms} displays the $v_{\rm rms}$ profile for: i) our combined 
-master catalogue of 1133 GCs and UCDs; ii) the GC catalogue of 
+Figure \ref{fig:vrms} displays the $v_{\rm rms}$ profile for: i) our combined master 
+catalogue of 1133 GCs and UCDs, including literature objects; ii) the GC catalogue of 
 \citet{Schuberth}, iii) the central stars of galaxies surrounding NGC~1399; iv) 
 all Fornax galaxies from \citet{Drinkwater00}, v) PNs from FVSS-II (Spiniello et al., 2018, submitted).
 
-The master catalogue contains GCs and UCDs predominantly from NGC 1399, which 
+The master catalogue contains GCs and UCDs predominantly from NGC~1399, which 
 is the largest and more massive system in the field dominating the total 
 potential in the core of the cluster. Here, objects from other galaxies, 
 embedded in the extended exponential halo around the galaxy \citep{Iodice16}, 
-in particular NGC 1404, NGC 1387, are likely to contaminate the 
+in particular NGC~1404, NGC~1387, are likely to contaminate the 
 kinematics of the central galaxies. However, looking at the $v_{\rm rms}$ 
 profile of the total sample (shaded gray area) there is a steep rise in the 
 profile around $R\sim10$ arcmin which marks a kinematical transition from a 
@@ -971,13 +971,14 @@ be the more extended population in radius, nicely connecting to the value of
 the cluster galaxy datapoint. The difference in normalisation between the two 
 populations may be driven by the different slopes of the two 
 populations density profiles as measured, e.g., by 
-\citep[][their Eq. 10 and 11 and Table 5]{Schuberth}. However, the difference 
-between the measured  slopes is so small that using Eq. 2 to 4 in \citet{Napolitano14} to 
-determine the expected change in the normalisation of the two profiles, we have 
-found that for a $v_{\rm rms} \sim 300$ km s $^{-1}$ of the red GC value the 
-estimated blue GC value of $v_{\rm rms}$ is $\sim 308$ km s $^{-1}$, i.e. 
-consistent with what we have measured for the Blue GC datapoint within the 
-typical errors. 
+\citep[][their Eq. 10 and 11 and Table 5]{Schuberth}. 
+%However, the difference 
+%between the measured  slopes is so small that using Eq. 2 to 4 in \citet{Napolitano14} to 
+%determine the expected change in the normalisation of the two profiles, we have 
+%found that for a $v_{\rm rms} \sim 300$ km s $^{-1}$ of the red GC value the 
+%estimated blue GC value of $v_{\rm rms}$ is $\sim 308$ km s $^{-1}$, i.e. 
+%consistent with what we have measured for the blue GC datapoints within the 
+%typical errors. 
 
 Finally, we report in the same Figure the central velocity dispersions of 
 the galaxies populating the same area occupied by the total GC catalog. 
@@ -995,7 +996,7 @@ population must be limited because, roughly speaking, it should dilute the true
 dispersion by a quantity that it is about the difference in quadrature (at the 
 most) of the true dispersion and that of the bound sample (i.e. assuming the 
 central velocity dispersion of the galaxy). If so, then the dilution can be as 
-large as 10-15$\%$, which is enough to explain the saddle in the  $v_{\rm rms}$ 
+large as 10-15$\%$, which is enough to explain the saddle in the $v_{\rm rms}$ 
 profile in the radius range $15<R<28$ arcmin corresponding to the bins 
 overlapping with NGC~1387, NGC~1389, NGC~1381 and NGC~1379, while a similar 
 correction for NGC~1404 at $R\sim10$ arcmin would increase the intrinsic $v_{\rm 
@@ -1011,8 +1012,8 @@ common cluster potential and also consistent with the velocity dispersion of
 the innermost cluster galaxies in the Fornax cluster. 
 
 Analogous signatures of intracluster stellar populations have been shown 
-previously in the Virgo and Fornax clusters \citep[see e.g., ][]{Arnaboldi04, 
-Longobardi15, Paolillo02} but the catalog presented here will offer a unique 
+previously in the Virgo and Fornax clusters \citep[see e.g., ][]{Paolillo02, Arnaboldi04, 
+Longobardi15} but the catalog presented here will offer a unique 
 chance to perform a fully dynamical analysis of both the bound and unbound GC 
 populations \citep{DAbrusco16}.
 
@@ -1032,8 +1033,8 @@ multi-band imaging, supported also by the many spectroscopic catalogues already
 present for this region of the sky.  Approximately 4500 objects were observed. 
 The total observation time was 37.5 hours, mostly in sub-arcsec seeing 
 conditions. Data reduction was performed using the ESO VIMOS pipeline. 
-Redshifts were extracted using iraf/fxcor, whereas the remaining data analysis 
-was carried out using the python suite. Only the Calcium Triplet region was 
+Redshifts were extracted using {\it iraf/fxcor}, whereas the remaining data analysis 
+was carried out using the {\it astropy} suite. Only the Calcium Triplet region was 
 used for redshift estimation, but the quality of the fit was assessed using the 
 full spectrum from 4800 to 10000 \AA\ .
 
@@ -1045,19 +1046,19 @@ in the observed field.
 
 We have used the new complete catalog of GCs to derive the total  $v_{\rm rms}$ 
 of the GC sample and also broken the sample in the red and blue subsamples using
-$(g - i) = 0.85$.
+the threshold $(g - i) = 0.85$.
 We have demonstrated that all profiles show a similar signature at around 
 $R\sim10$ arcmin of a kinematical transition from a low $v_{\rm rms}$ regime to a 
 higher one, with the former being consistent with the central velocity 
-dispersion of NGC 1399 (the central cluster galaxy) and the latter being 
+dispersion of NGC~1399 (the central cluster galaxy) and the latter being 
 consistent with the velocity dispersion of the cluster galaxies. This 
-demonstrates that at $R>10$ arcmin both the GC populations feel strongly the cluster 
+demonstrates that at $R>10$ arcmin both GC populations feel strongly the cluster 
 potential, rather than the more fable galaxy potential. Parallel to this paper 
 we also performed a similar analysis where we present similar evidence based on 
-kinematical distribution ot planetary nebulae (PNe) in the core of the cluster, 
-up to 200kpc (Spiniello et al. 2018, submitted). PNe also show a rise in the 
+kinematical distribution of planetary nebulae (PNe) in the core of the cluster, 
+up to 200 Kpc (Spiniello et al. 2018, submitted). PNe also show a rise in the 
 velocity dispersion compatible with PNe tracing the potential of the cluster as 
-a whole. A detailed kinematical characterization of these ICL populations, will 
+a whole. A detailed kinematical characterization of these intra cluster populations will 
 be the topic of a forthcoming analysis. We just point out here that these 
 kinematical evidences corroborate the photometric evidence, found in the deep 
 galaxy photometry, of a transition radius between the bright central galaxy and 
